fix module buttons overflow-x

--- a/_sass/elite-course.scss
+++ b/_sass/elite-course.scss
@@ -905,7 +905,7 @@
   position: relative;
   padding-left: 15px;
   margin-left: 15px;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   &:after {
     content: "";
